--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ export_credentials.cfg
 data_*/
 mono_crash.*.json
 .vscode/settings.json
+linux/LowMidHigh.x86_64
+mac/Supersonic.dmg
+/windows
+/web
